fix: Text/button overlapping image question dialog textarea [PT-185160708]
This change removes the constraint for the dialog height and moves the close section into the right panel allowing the absolute positioning that was causing the overlap to be removed.

--- a/packages/image-question/src/components/runtime.scss
+++ b/packages/image-question/src/components/runtime.scss
@@ -36,7 +36,6 @@ legend.prompt { // clear bootstrap stuff
 }
 
 .dialogContent {
-  height: 600px;
   width: 960px;
   margin: 0 auto;
   position: relative;
@@ -52,13 +51,9 @@ legend.prompt { // clear bootstrap stuff
     vertical-align: top;
     display: inline-block;
     width: 280px;
-  }
 
-  .closeDialogSection {
-    width: 280px;
-    text-align: right;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    .closeDialogSection {
+      text-align: right;
+    }
   }
 }
